--- a/05_ConfigServlet/WebContent/config2.html
+++ b/05_ConfigServlet/WebContent/config2.html
@@ -5,6 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+   <form action="cs2" method="post">
+       <label>Username : <input type="text" name="userName" placeholder="사용자 이름 입력"></label>
+       <input type="submit" value="SEND">
+   </form>
 </body>
 </html>
