--- a/07_CafeMember/WebContent/404error.html
+++ b/07_CafeMember/WebContent/404error.html
@@ -3,8 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<style>
+body {
+	display: flex;
+	justify-content: center;
+}
+img {
+	width: 45%;
+	min-width: 450px;
+}
+</style>
 </head>
 <body>
-
+	<img src="../images/404.jpg" >
 </body>
 </html>
